last style modifications :art:

--- a/anti-waste/anti-waste/Home.storyboard
+++ b/anti-waste/anti-waste/Home.storyboard
@@ -81,6 +81,13 @@
                                     <constraint firstAttribute="height" constant="306" id="LZr-2u-hl4"/>
                                 </constraints>
                             </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="🚧 WORK IN PROGRESS 🚧" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gXy-lX-VTa">
+                                <rect key="frame" x="89" y="317" width="197" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
